--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp": "3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-inline-ng2-template": "^2.0.0",
+    "gulp-insert": "^0.5.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.5",
     "gulp-uglify": "^1.5.3",
