--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "del": "2.2.0",
     "gulp": "3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-inject": "^4.1.0",
+    "gulp-inject-file": "0.0.17",
+    "gulp-inject-string": "^1.1.0",
     "gulp-inline-ng2-template": "^2.0.0",
     "gulp-insert": "^0.5.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.5",
     "gulp-uglify": "^1.5.3",
